# nmpde-labs-aa-23-24

./: .clang-format  .gitignore  README.md
examples/gmsh/: mesh-pipe.geo  mesh-pipe.msh  mesh-square.geo
lab-01/src/: Poisson1D.cpp  Poisson1D.hpp  lab-01.cpp
lab-02/: CMakeLists.txt
lab-02/src/: Poisson1D.cpp  Poisson1D.hpp  lab-02.cpp
lab-03/: CMakeLists.txt
lab-03/src/: Poisson2D.hpp
lab-04/: CMakeLists.txt
lab-04/src/: Poisson2D.cpp  Poisson2D.hpp  lab-04.cpp
lab-05/: CMakeLists.txt
lab-05/src/: Poisson3D.cpp  Poisson3D.hpp  Poisson3D_parallel.cpp  Poisson3D_parallel.hpp  lab-05.cpp  lab-05_parallel.cpp
lab-06/: CMakeLists.txt
lab-06/src/: Heat.cpp  Heat.hpp  lab-06.cpp
lab-07/: CMakeLists.txt
lab-07/scripts/: mesh-beam.geo
lab-07/src/: LinearElasticity.cpp  LinearElasticity.hpp  NonLinearDiffusion.cpp  NonLinearDiffusion.hpp  lab-07-exercise1.cpp  lab-07-exercise2.cpp
lab-08/: CMakeLists.txt
lab-08/scripts/: plot-convergence.py
lab-08/src/: Heat.cpp  Heat.hpp  HeatNonLinear.cpp  HeatNonLinear.hpp  lab-08-exercise1.cpp  lab-08-exercise2.cpp
lab-09/: CMakeLists.txt
lab-09/src/: Stokes.cpp  Stokes.hpp  lab-09.cpp
lab-09/text/: Makefile
lab-10/: CMakeLists.txt
lab-10/src/: Poisson2D.cpp  Poisson2D.hpp  lab-10.cpp
